# Disability-Assist

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.claude/: AGENTS.md  CLAUDE.md  SKILLS.md  settings.json
.claude/commands/: commit.md  device-setup.md  new-api.md  new-component.md  phase-complete.md  pr.md  privacy-audit.md  quality.md  review.md  security-check.md
.claude/hooks/: _constants.py  _magic_numbers.py  _no_mock.py  _phase_config.py  _privacy_patterns.py  check-ci-after-push.py  check-consent-lanes.py  check-doc-updates-precommit.py  check-line-endings-precommit.py  check-line-endings.py  check-magic-numbers-precommit.py  check-magic-numbers.py  check-no-mock-precommit.py  check-no-mock.py  check-phase-scope.py  check-privacy-patterns-precommit.py  check-privacy-patterns.py  check-version-sync-precommit.py  lint-python.py  remind-device-route.py  remind-doc-update.py  remind-plan-update.py  sync-versions.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  privacy_issue.yml  safety_concern.yml
.github/workflows/: attribution.yml  ci.yml
cloud/: __init__.py
device/: __init__.py
docs/: PLAN.md  PRD-00-Index.md  PRD-01-Overview-and-Vision.md  PRD-02-User-Personas-and-Journeys.md  PRD-03-System-Architecture.md  PRD-04-Voice-Input-and-STT.md  PRD-05-LLM-Intent-Engine.md  PRD-06-Adaptive-Voice-Output.md  PRD-07-Smart-Home-Integration.md  PRD-08-Personalization-and-Memory.md  PRD-09-Caregiver-Communication-Bridge.md  PRD-10-Hardware-Reference-Design.md  PRD-11-Privacy-Security-and-Ethics.md  PRD-12-Open-Source-Contribution-Guide.md  PRD-13-Cloud-RAG-and-Cross-User-Learning.md  PRD-14-Caregiver-Mobile-App.md  PRD-SUMMARY.md  ROADMAP.md
docs/governance/: adr-template.md  consent-lane-matrix.md  data-classification-matrix.md  threat-model.md  user-role-matrix.md
docs/governance/adr/: ADR-001-cloud-first-architecture.md
infra/: __init__.py
policy/: __init__.py
scripts/: check-license-headers.py  update-contributors.py
tests/: __init__.py  conftest.py
